--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 	<title>Skill Lurker - Império de Jade</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet" />
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/bundle.css'>
 
